# blog

./: .gitignore  README.md  _quarto.yml  index.qmd  pyproject.toml
docs/: CNAME  index.html  index.llms.md  index.xml  listings.json  llms.txt  robots.txt  search.json  sitemap.xml
docs/assets/css/: global.css
docs/posts/cir-calibration/: index.html  index.llms.md
docs/posts/convert-raw-trace-data/: index.html
docs/posts/crsp-v2-update/: index.html  index.llms.md
docs/posts/fama-french-three-vs-five-factors/: index.html  index.llms.md
docs/posts/gu-kelly-xiu-replication/: index.html  index.llms.md
docs/posts/hf-and-hugging-face/: index.html  index.llms.md
docs/posts/hf-and-lobster/: index.html  index.llms.md
docs/posts/historical-sp-500-total-return/: index.html  index.llms.md
docs/posts/iss-shareholder-proposals/: index.html  index.llms.md
docs/posts/legacy-python-pandas/: index.html  index.llms.md
posts/: _metadata.yaml
posts/cir-calibration/: index.qmd
posts/convert-raw-trace-data/: index.qmd
posts/crsp-v2-update/: index.qmd
posts/fama-french-three-vs-five-factors/: index.qmd
posts/gu-kelly-xiu-replication/: index.qmd
posts/hf-and-hugging-face/: index.qmd
posts/hf-and-lobster/: index.qmd
posts/historical-sp-500-total-return/: index.qmd
posts/iss-shareholder-proposals/: index.qmd
posts/legacy-python-pandas/: index.qmd
posts/nse-portfolio-sorts/: index.qmd
posts/sql-legacy-version/: sql-legacy-version.qmd
posts/tidy-market-microstructure/: index.qmd
posts/using-duckdb-with-wrds/: index.qmd
(+39 files in other folders)
