[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "tidyfinance>=0.3.0",
]
